--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <html>
   <head>
+    <header>
+      <<img class="image" src="rep.jpg"> >
+      </header>
    </head>
     <body>
+      <>
       <h1> Liza </h1>
   </body>
  </html>
