--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <header>
-      <<img class="image" src="rep.jpg"> >
+      <img class="image" src="rep.jpg">
       </header>
    </head>
     <body>
