--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+     <link rel = stylesheet href="MyPage.css">
     <header>
       <img class="image" src="rep.jpg">
       </header>
