--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <html>
-  <head>
-     <link rel = stylesheet href="MyPage.css">
-    <header>
-      <img class="image" src="rep.jpg">
-      </header>
-   </head>
+    <head>
+         <link rel = stylesheet href="MyGitHubPage.css">
+    </head>
     <body>
       <h1> Hello </h1>
+        <script src=MyGitHubPage.js></script>
   </body>
  </html>
