--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-         <link rel = stylesheet href="MyGitHubPage.css">
+         <link rel = stylesheet href="MyPage.css">
     </head>
     <body>
       <h1> Hello </h1>
