--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title>My Project</title>
          <link rel = stylesheet href="MyGitHubPage.css">
     </head>
     <body id="body">
