--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <h1>Welcome to My Page</h1>
         </div>
         <div class="top_menu">|
-            <a href="MyGitHubPage.html#myProject">My Projects</a> |
+            <a href="index.html#myProject">My Projects</a> |
             <a href="CV.pdf" target="_blank">About Me</a> |
 
     
